; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallHwndParam.c_Test_HwndParamRoutine_SetWindowContextHelpId.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallHwndParam.c_Test_HwndParamRoutine_SetWindowContextHelpId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_HWNDPARAM_ROUTINE_SETWNDCONTEXTHLPID = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@HWND_ROUTINE_GETWNDCONTEXTHLPID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_HwndParamRoutine_SetWindowContextHelpId(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @_HWNDPARAM_ROUTINE_SETWNDCONTEXTHLPID, align 4
  %5 = call i64 @NtUserCallHwndParam(i32 %3, i32 12345, i32 %4)
  %6 = load i64, i64* @TRUE, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @TEST(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @HWND_ROUTINE_GETWNDCONTEXTHLPID, align 4
  %12 = call i32 @NtUserCallHwnd(i32 %10, i32 %11)
  %13 = icmp eq i32 %12, 12345
  %14 = zext i1 %13 to i32
  %15 = call i32 @TEST(i32 %14)
  ret void
}

declare dso_local i32 @TEST(i32) #1

declare dso_local i64 @NtUserCallHwndParam(i32, i32, i32) #1

declare dso_local i32 @NtUserCallHwnd(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
